# ml4t-india

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  upstream-drift.yml
docs/: api.md  ecosystem.md  index.md  phase-0.md  quickstart.md
notebooks/: 01-login-and-auth.ipynb  02-instruments-resolve.ipynb  03-historical-ohlcv.ipynb  04-backtest-with-charges.ipynb  05-lot-sizing.ipynb  06-option-chain.ipynb  07-greeks-sensitivity.ipynb  08-live-broker-orders.ipynb  09-ticker-feed.ipynb  10-deployment-pipeline.ipynb
src/ml4t/india/: __init__.py
src/ml4t/india/backtest/: __init__.py  charges.py  lot_sizing.py  presets.py
src/ml4t/india/calendar/: __init__.py  nse.py
src/ml4t/india/cli/: __init__.py  main.py
src/ml4t/india/core/: __init__.py  constants.py  exceptions.py
src/ml4t/india/data/: __init__.py  base.py  kite.py  kite_async.py
src/ml4t/india/kite/: __init__.py  auth.py  client.py  errors.py  fake.py  instruments.py  rate_limit.py
src/ml4t/india/live/: __init__.py  angelone_broker.py  base.py  feed_base.py  fivepaisa_broker.py  kite_broker.py  kite_ticker_feed.py  postbacks.py  upstox_broker.py
src/ml4t/india/options/: __init__.py  chain.py  greeks.py
src/ml4t/india/workflows/: __init__.py  deployment.py  research.py
tests/: test_placeholder.py
tests/contracts/: test_upstream_api_snapshot.py
tests/property/: __init__.py  test_charges_props.py  test_greeks_props.py  test_lot_sizing_props.py
tests/unit/: test_angelone_broker.py  test_charges.py  test_cli.py  test_core_constants.py  test_core_exceptions.py  test_deployment_pipeline.py  test_fake_kite_client.py  test_fivepaisa_broker.py  test_greeks.py  test_indian_live_base.py  test_indian_ohlcv_provider.py  test_kite_async_provider.py  test_kite_auth.py  test_kite_broker.py  test_kite_client.py  test_kite_errors.py  test_kite_instruments.py  test_kite_provider.py  test_kite_rate_limit.py  test_kite_ticker_feed.py  test_nse_calendar.py  test_option_chain.py  test_postbacks.py  test_presets_and_lot_sizing.py  test_upstox_broker.py
